--- a/main/LewaDeskClock.apk/res/values-cs/strings.xml
+++ b/main/LewaDeskClock.apk/res/values-cs/strings.xml
@@ -1,115 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="full_wday_month_day_no_year">EEEE, d. MMMM</string>
-<string name="app_label">Hodiny</string>
-<string name="alarm_list_title">Budíky</string>
-<string name="add_alarm">Přidat budík</string>
-<string name="menu_desk_clock">Stolní hodiny</string>
-<string name="menu_edit_alarm">Upravit budík</string>
-<string name="delete_alarm">Smazat budík(y)</string>
-<string name="enable_alarm">Zapnout budík</string>
-<string name="disable_alarm">Vypnout budík</string>
-<string name="delete_alarm_confirm">Opravdu chcete smazat?</string>
-<string name="show_clock">Ukázat hodiny</string>
-<string name="hide_clock">Skrýt hodiny</string>
-<string name="label">Popis</string>
-<string name="default_label">Budík</string>
-<string name="set_alarm">Nastavit budík</string>
-<string name="alarm_vibrate">Vibrovat</string>
-<string name="alarm_repeat">Opakovat</string>
-<string name="alert">Vyzváněcí tón</string>
-<string name="time">Čas</string>
-<string name="alarm_alert_dismiss_text">Zrušit</string>
-<string name="alarm_alert_alert_silenced">Budík ztišit po %d minutách.</string>
-<string name="alarm_alert_snooze_text">Odložit</string>
-<string name="alarm_alert_snooze_set">Upozornění odloženo o %d minut.</string>
-<string name="day">1 den</string>
-<string name="days">%s dní</string>
-<string name="hour">1 hodina</string>
-<string name="hours">%s hod.</string>
-<string name="minute">1 minuta</string>
-<string name="minutes">%s min.</string>
-<string name="every_day">Každý den</string>
-<string name="never">Nikdy</string>
-<string name="day_concat">", "</string>
-<string name="clock_instructions">Vybrat hodiny</string>
-<string name="analog_gadget">Analogové hodiny</string>
-<string name="settings">Nastavení</string>
-<string name="alarm_in_silent_mode_title">Budit v tichém režimu</string>
-<string name="alarm_in_silent_mode_summary">Budit i v případě, že je telefon v tichém režimu.</string>
-<string name="snooze_duration_title">Doba odložení</string>
-<string name="auto_silence_title">Automatické ztišení</string>
-<string name="auto_silence_summary">Budíky budou ztišeny po %d min.</string>
-<string name="auto_silence_never">Vypnuto</string>
-<string name="done">Hotovo</string>
-<string name="revert">Vrátit zpět</string>
-<string name="delete">Smazat</string>
-<string name="alarm_volume_title">Hlasitost budíku</string>
-<string name="alarm_volume_summary">Nastavení hlasitosti buzení</string>
-<string name="silent_alarm_summary">Tichý</string>
-<string name="alarm_notify_text">Odložit nebo zavřít budík</string>
-<string name="alarm_notify_snooze_label">%s (odloženo)</string>
-<string name="alarm_notify_snooze_text">Budík je nastaven na %s. Dotykem jej zrušíte.</string>
-<string name="volume_button_setting_title">Tlačítka hlasitosti a fotoaparátu</string>
-<string name="volume_button_dialog_title">Funkce tlačítek</string>
-<string name="volume_button_setting_summary">Nastavte funkci těchto tlačítek, pokud jsou stisknuta během vyzvánění budíku.</string>
-<string name="default_ringtone_setting_title">Vyzváněcí tón</string>
-<string name="alarm_button_description">Budíky</string>
-<string name="gallery_button_description">Galerie</string>
-<string name="music_button_description">Hudba</string>
-<string name="nightmode_button_description">Ztlumit</string>
-<string name="home_button_description">Launcher</string>
-<string name="desk_clock_button_description">Zobrazení hodin</string>
-<string name="battery_charging_level">%d %%</string>
-<string name="weather_fetch_failure">Informace o počasí nejsou momentálně k dispozici.</string>
-<string name="menu_item_dock_settings">Nastavení doku</string>
-<string name="alarm_klaxon_service_desc">Služba přehrávání zvonění nastavených v aplikaci Hodiny.</string>
-<string name="loading_ringtone">Nahrávám vyzvánění</string>
-<string name="control_set_alarm">Nastavit budík</string>
-<string name="control_set_alarm_with_existing">Budík nastaven: %s</string>
-<string name="power_on">Ignorovat a zapnout</string>
-<string name="power_off">Ignorovat a vypnout</string>
-<string name="repeat_weekdays">Pracovní dny</string>
-<string name="stop_watch">Stopky</string>
-<string name="easter_eggs_string">LewaROM má rok!</string>
-<string name="alarm">Budík</string>
-<string name="world_clock">Mezinárodní čas</string>
-<string name="stopwatch">Stopky</string>
-<string name="timer">Časovač</string>
-<string name="add">Přidat</string>
-<string name="edit">Editovat</string>
-<string name="cancel">Zrušit</string>
-<string name="save">Uložit</string>
-<string name="today">Dnes</string>
-<string name="yesterday">Včera</string>
-<string name="tomorrow">Zítra</string>
-<string name="addworld_clock_city_hint">Vyhledat město časového pásma</string>
-<string name="delete_city">Smazat město</string>
-<string name="delete_city_confirm">Opravdu chcete smazat vybrané?</string>
-<string name="snooze">Odložit</string>
-<string name="close_alarm">Zavřít</string>
-<string name="start">Start</string>
-<string name="pause">Pauza</string>
-<string name="reset">Resetovat</string>
-<string name="timer_continue">Pokračovat</string>
-<string name="lap">Kolo</string>
-<string name="timer_hour">Hod</string>
-<string name="timer_minute">Min</string>
-<string name="timer_second">Sec</string>
-<string name="repeat_weekend">Víkend</string>
-<string name="one_minute">1 minuta</string>
-<string name="five_minute">5 minut</string>
-<string name="ten_minute">10 minut</string>
-<string name="timer_ring">Vyzváněcí tón:</string>
-<string name="timer_init_start">"Posunem do strany nastavte délku času"</string>
-<string name="timer_time_up">Čas vypršel</string>
-<string name="timer_time_up_ok">Známý</string>
-<string name="delete_selected">Vybráno %s</string>
-<string name="alarm_empty_text">Stiskem tlačítka níže přidáte budík</string>
-<string name="world_clock_empty_text">Stiskem tlačítka níže přidáte čas</string>
-<string name="add_city">Přidat zónu</string>
-<string name="could_not_add_more_lap_time">Již nelze provést, maximálně lze změřit 99 kol.</string>
-<string name="menu_actionbar_selected_items">Vybráno: %s</string>
-<string name="menu_multichoice_select_all">Vybrat vše</string>
-<string name="menu_multichoice_clear_select">Zrušit výběr</string>
+    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
+    <string name="app_label">Hodiny</string>
+    <string name="alarm_list_title">Budíky</string>
+    <string name="add_alarm">Přidat budík</string>
+    <string name="menu_desk_clock">Stolní hodiny</string>
+    <string name="menu_edit_alarm">Upravit budík</string>
+    <string name="delete_alarm">Odstranit upozornění</string>
+    <string name="enable_alarm">Zapnout budík</string>
+    <string name="disable_alarm">Vypnout budík</string>
+    <string name="delete_alarm_confirm">Odstranit tento budík?</string>
+    <string name="show_clock">Zobrazovat hodiny</string>
+    <string name="hide_clock">Skrýt hodiny</string>
+    <string name="label">Popisek</string>
+    <string name="default_label">Budík</string>
+    <string name="set_alarm">Buzení</string>
+    <string name="alarm_vibrate">Vibrovat</string>
+    <string name="alarm_repeat">Opakovat</string>
+    <string name="alert">Vyzváněcí tón</string>
+    <string name="time">Čas</string>
+    <string name="alarm_alert_dismiss_text">Zavřít</string>
+    <string name="alarm_alert_alert_silenced">Budík umlčet po %d minutách.</string>
+    <string name="alarm_alert_snooze_text">Připomenout znovu</string>
+    <string name="alarm_alert_snooze_set">Odložit o %d minut.</string>
+    <string name="day">1 den</string>
+    <string name="days">%s dny</string>
+    <string name="hour">1 hodina</string>
+    <string name="hours">%s hodin</string>
+    <string name="minute">1 minuta</string>
+    <string name="minutes">%s min.</string>
+    <string name="every_day">Každý den</string>
+    <string name="never">Nikdy</string>
+    <string name="day_concat">", "</string>
+    <string name="clock_instructions">Zvolte hodiny</string>
+    <string name="analog_gadget">Analogové hodiny</string>
+    <string name="settings">Nastavení</string>
+    <string name="alarm_in_silent_mode_title">Poplach v tichém režimu</string>
+    <string name="alarm_in_silent_mode_summary">Hrát poplach i v případě, že je telefon v tichém režimu</string>
+    <string name="snooze_duration_title">Doba trvání Dospat</string>
+    <string name="auto_silence_title">Auto mlčení</string>
+    <string name="auto_silence_summary">Budíky se ztiší po %d minutách</string>
+    <string name="auto_silence_never">Vypnuto</string>
+    <string name="done">Hotovo</string>
+    <string name="revert">Vrátit</string>
+    <string name="delete">Odstranit</string>
+    <string name="alarm_volume_title">Hlasitost budíku</string>
+    <string name="alarm_volume_summary">Nastavte hlasitost signalizace</string>
+    <string name="silent_alarm_summary">Tichý</string>
+    <string name="alarm_notify_text">Připomenout znovu nebo zrušit poplach.</string>
+    <string name="alarm_notify_snooze_label">%s (připomenout znovu)</string>
+    <string name="alarm_notify_snooze_text">Budík nastaven na %s. Dotekem zrušit.</string>
+    <string name="volume_button_setting_title">Tlačítka hlasitosti</string>
+    <string name="volume_button_dialog_title">Tlačítkový efekt</string>
+    <string name="volume_button_setting_summary">Nastavit, co tlačítka dělají během budíku</string>
+    <string name="default_ringtone_setting_title">Nastavit výchozí vyzvánění</string>
+    <string name="alarm_button_description">Budíky</string>
+    <string name="gallery_button_description">Galerie</string>
+    <string name="music_button_description">Hudba</string>
+    <string name="nightmode_button_description">Dim</string>
+    <string name="home_button_description">Spouštěč</string>
+    <string name="desk_clock_button_description">Zobrazení hodin</string>
+    <string name="battery_charging_level">%d%%</string>
+    <string name="weather_fetch_failure">Informace o počasí není k dispozici právě teď.</string>
+    <string name="menu_item_dock_settings">Nastavení doku</string>
+    <string name="alarm_klaxon_service_desc">Přehrávání zvuku pro budíky uprostřed hodin.</string>
+    <string name="loading_ringtone">Načítání vyzvánění</string>
+    <string name="control_set_alarm">Buzení</string>
+    <string name="control_set_alarm_with_existing">Nastavení budíku: %s</string>
+    <string name="power_on">Propustit a zapnout</string>
+    <string name="power_off">Propustit a vypnout</string>
+    <string name="repeat_weekdays">Ve všední dny</string>
+    <string name="stop_watch">Stopky</string>
+    <string name="easter_eggs_string">LewaROM je jeden rok starý!</string>
+    <string name="alarm">Budík</string>
+    <string name="world_clock">Hodiny</string>
+    <string name="stopwatch">Stopky</string>
+    <string name="timer">Časovač</string>
+    <string name="add">Přidat</string>
+    <string name="edit">Úpravy</string>
+    <string name="cancel">Storno</string>
+    <string name="save">Uložit</string>
+    <string name="today">Dnes</string>
+    <string name="yesterday">Včera</string>
+    <string name="tomorrow">Zítra</string>
+    <string name="addworld_clock_city_hint">Hledáním přidat časové pásmo město</string>
+    <string name="delete_city">Odstranit město</string>
+    <string name="delete_city_confirm">Potvrdit odstranění</string>
+    <string name="snooze">Připomenout znovu</string>
+    <string name="close_alarm">Zavřít</string>
+    <string name="start">Start</string>
+    <string name="pause">Pauza</string>
+    <string name="reset">Obnovit</string>
+    <string name="timer_continue">Pokračovat</string>
+    <string name="lap">Kolo</string>
+    <string name="timer_hour">Hodina</string>
+    <string name="timer_minute">Min</string>
+    <string name="timer_second">Sek</string>
+    <string name="repeat_weekend">Víkend</string>
+    <string name="one_minute">1 minuta</string>
+    <string name="five_minute">5 minut</string>
+    <string name="ten_minute">10 minut</string>
+    <string name="timer_ring">Připomenout zvoněním</string>
+    <string name="timer_init_start">Natočením začít</string>
+    <string name="timer_time_up">Čas vypršel</string>
+    <string name="timer_time_up_ok">OK</string>
+    <string name="delete_selected">Vybrané %s</string>
+    <string name="alarm_empty_text">Stiskněte tlačítko níže a přidejte budík</string>
+    <string name="world_clock_empty_text">Stiskněte tlačítko níže a přidejte hodiny</string>
+    <string name="add_city">Přidat hodiny</string>
+    <string name="could_not_add_more_lap_time">Promiňte, můžete měřit nejvíce 99 kol!</string>
+    <string name="menu_actionbar_selected_items">%s vybráno</string>
+    <string name="menu_multichoice_select_all">Vybrat vše</string>
+    <string name="menu_multichoice_clear_select">Zrušit výběr</string>
 </resources>
